--- a/main.css
+++ b/main.css
@@ -6,6 +6,12 @@ body{
         background-color: black;
         color: white
     }
+}
 
-
+.center {
+    margin: auto;
+    margin-top: 10%;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
 }
